# CleanMake

./: .gitignore  CMakeLists.txt  README.md
FWProfile/: CMakeLists.txt  FwPrConfig.c  FwPrConfig.h  FwPrCore.c  FwPrCore.h  FwPrPrivate.h  FwPrSCreate.c  FwSmAux.h  FwSmConfig.h  FwSmCore.h  FwSmSCreate.h
customLibs/: CMakeLists.txt  communication.json  helper.cpp  helper.h  misc.h  timeUtil.cpp  timeUtil.h  timer.h
demo/: CMakeLists.txt  demo.cpp
interface/: IConnection.h  IDriver.h  IDriverManager.h  IMessage.h  IOperation.h  ISingleton.h
libs/LibMPSSE-I2C/include/: libMPSSE_i2c.h
libs/LibMPSSE-SPI/include/: libMPSSE_spi.h
libs/lua-5.3.5/: t.lua
source/: CMakeLists.txt  ConnectionFactory.cpp  ConnectionFactory.h  Lightsource.cpp  Lightsource.h  LightsourceManager.cpp  LightsourceManager.h  OperationFactory.cpp  OperationFactory.h  Sample.h  SingletonCollector.cpp  SingletonCollector.h  SocketConnection.cpp  SocketConnection.h  SysOperation.cpp  SysOperation.h  USB2SPIDriver.cpp  USB2SPIDriver.h  XMLMessage.cpp  XMLMessage.h  logger.cpp  logger.h  myMpsse.h  serial.cpp  serial.h  timeUtil.cpp  timer.cpp  timer.h  xmlEventParser.cpp  xmlEventParser.h
test/: CMakeLists.txt  catch2Array.cpp  catchClass.cpp  catchClassLogger.cpp  catchCleverLogger.cpp  catchDriver.cpp  catchFTDI.cpp  catchInterface.cpp  catchJson.cpp  catchMain - Kopie.cpp  catchMain.cpp  catchMisc.cpp  catchParameter.cpp  catchRecursion.cpp  catchSerial.cpp  catchStateMachine.cpp  catchThread.cpp  catchTimer.cpp  catchToString.cpp  catchTryCatch.cpp  catchVirtual.cpp  readme.md
winLibs/debug/: ftdi1.lib  libusb-1.0.lib  libz-static.lib
winLibs/libftdi/: ftdi.h
winLibs/release/: ftdi1.lib  libusb-1.0.lib  libz-static.lib  xmlwrapp.lib
winLibs/xmlwrapp/: _cbfo.h
